working on cartAddress

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,3 +96,13 @@ input[type=number] {
 .PhoneInputInput {
     border: 0
 }
+
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-inner-spin-button,
+input[type="time"]::-webkit-calendar-picker-indicator
+{
+    display: none;
+    -webkit-appearance: none;
+}
