--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,15 +26,15 @@
     font-display: swap;
 }
 
-.font-arboria-light, button, .Toastify__toast-body {
+.font-arboria-light {
     font-family: 'Arboria-Light', 'sans-serif' !important;
 }
 
-.font-gess-medium, button, .Toastify__toast-body {
+.font-gess-medium {
     font-family: 'GE_SS_Text_Light', 'sans-serif' !important;
 }
 
-.font-tajwal-medium, button, .Toastify__toast-body {
+.font-tajwal-medium {
     font-family: 'Arboria-Light', 'sans-serif' !important;
 }
 
@@ -68,11 +68,6 @@
 
 .slick-next:before {
     color: black !important;
-}
-
-#headerModalTitle {
-    min-width: 35rem !important;
-    font-family: 'Tajawal-Medium', 'sans-serif' !important;
 }
 
 .css-195y93z-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
