--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,3 +144,14 @@ input[type="tel"] {
     text-transform: capitalize;
 }
 
+.openStore {
+    color: #047857 !important;
+}
+
+.busyStore {
+    color: #a3a3a3 !important;
+}
+
+.closedStore {
+    color: #dc2626 !important;
+}
