--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,3 +158,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0.6;
     filter: invert(0.8);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar ::-webkit-scrollbar {
+    display: none !important;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none !important;  /* IE and Edge */
+    scrollbar-width: none !important;  /* Firefox */
+}
