--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,3 +158,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0.6;
     filter: invert(0.8);
 }
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
+}
